# nyx

./: .gitignore  Dockerfile  LICENSE  README.md  README.txt  decision_particles.py  discipline.py  docker-compose.yml  emotion_l3.py  emotion_vocab.py  heartbeat.py  install.bat  install.sh  l3_persona.py  l3_search_core.py  mcp_server.py  memory_provider.py  migrate_v2_4.py  nexsandglass.py  nightwatch.py  persona_l3.py  plugin.py  pulse.py  pyproject.toml  sandglass_archive.py  sandglass_log.py  sandglass_mcp.py  sandglass_paths.py  sandglass_sqlite.py  sandglass_think.py  sandglass_vault.py  search_router.py  shadow_sand.py  soul_diff.py  think.py  vault.py  weave_l3.py  weavethread.py
demo/: demo_clean.py  run_demo.py
docs/: PROTOCOL.md  decision_particles_sample.txt  persona.md  偏移率说明书.md
experiments/: ponytail.py
nexsandglass/: __init__.py
nexsandglass/core/: __init__.py  emotion_vocab.py  l0_buffer.py  memory_provider.py  sandglass.py  sandglass_archive.py  sandglass_log.py  sandglass_paths.py  sandglass_sqlite.py  search_router.py
nexsandglass/features/: __init__.py  decision_particles.py  multi_analysis.py  nightwatch.py  pulse.py  sandglass_think.py  sandglass_vault.py  shadow_sand.py  soul_diff.py  weavethread.py
nexsandglass/interfaces/: __init__.py  nexsandglass.py  nyx.py  plugin.py  sandglass_mcp.py
nexsandglass/l3/: __init__.py  emotion_l3.py  l3_persona.py  l3_persona_verify.py  l3_search_core.py  l3_tasks.py  offset_l3.py  offset_signals.py  persona_l3.py  scene_l3.py  weave_l3.py
nexsandglass/utils/: __init__.py  discipline.py  (+1 more)
