[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nexsandglass"
version = "3.0.0"
description = "夜神 Nyx — 跨会话记忆感知系统"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "sixgod", email = "sixgod@hvh.expert"}
]
keywords = ["memory", "agent", "ai", "knowledge-graph", "dejavu"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.optional-dependencies]
mcp = ["mcp>=0.9.0"]
test = ["pytest>=7.0"]

[tool.setuptools.packages.find]
include = ["nexsandglass*"]
exclude = ["tests*", "experiments*", "scripts*"]
